Adding temporary changes to Github

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,35 +30,34 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      Welcome to Best Cars Dealership, home to the best cars in North America. We deal in the sale of domestic and imported cars at reasonable prices, offering unmatched quality and customer service to ensure you find the perfect vehicle.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://cdn.pixabay.com/photo/2023/04/23/01/38/ai-generated-7944744_1280.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Owner</p>
+          <p>Roger Richardson</p>
+          <p class="card-text">At Best Cars Dealership, Roger Richardson founded the dealership with a vision to provide quality vehicles and exceptional service to the community. With over 20 years of experience in the automotive industry, he continues to lead the business with a customer-first approach.</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://thispersonnotexist.org/static/img/Random_female_face_1.jpeg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">General Manager </p>
+          <p>Ashley Thompson</p>
+          <p class="card-text">At Best Cars Dealership, Ashley Thompson serves as the General Manager, overseeing daily operations and ensuring a seamless customer experience. With 8 years of leadership in the automotive industry, she is dedicated to maintaining high standards of service and efficiency.</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.generated.photos/hduC_c_9RYIUAnQvFf6wh91HGwQ9ch3IceyinaIQcnY/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MTc0NzA1LmpwZw.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Sales Manager</p>
+          <p>Michael Reyes</p>
+          <p class="card-text">As the Sales Manager at Best Cars Dealership, Michael Reyes leads the sales team with a focus on delivering personalized service and meeting customer needs. His extensive experience in automotive sales helps drive team success and achieve dealership goals.</p>
         </div>
       </div>
     </div>
