--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -1,29 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dealerships</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/style.css">
   <link rel="stylesheet" href="static/bootstrap.min.css">
-<script>
+  <script>
+    const logout = async (e) => {
+      e.preventDefault(); // Prevent default anchor behavior
+      let logout_url = window.location.origin + "/djangoapp/logout/";
+      try {
+        const res = await fetch(logout_url, {
+          method: "POST", // Use POST for logout
+          headers: {
+            'Content-Type': 'application/json',
+            'X-Requested-With': 'XMLHttpRequest'
+          },
+        });
+        const json = await res.json();
+        if (json && json.userName !== undefined) {
+          let username = sessionStorage.getItem('username');
+          sessionStorage.removeItem('username');
+          window.location.href = window.location.origin;
+          window.location.reload();
+          alert("Logging out " + username + "...");
+        } else {
+          alert("The user could not be logged out.");
+        }
+      } catch (error) {
+        console.error('Logout failed:', error);
+        alert("An error occurred while logging out.");
+      }
+    };
 
-const logout = async (e) => {
-//Include the code for logout here.
-};
+    let checkSession = () => {
+      let curr_user = sessionStorage.getItem("username");
 
-let checkSession = ()=>{
-  let curr_user = sessionStorage.getItem("username");
-
-  if (curr_user && curr_user !== "") {
-    document.getElementById("loginlogout").innerHTML = 
-    '<span class="homepage_links">' + curr_user +'</span>' +
-    '<a class="homepage_links" onclick="logout()" href="/">Logout</a>'
-  } else {
-    document.getElementById("loginlogout").innerHTML = 
-    '<a class="homepage_links" href="/login">Login</a>'+
-    '<a class="homepage_links"  href="/register">Register</a>'
-  }
- }
-</script>
+      if (curr_user && curr_user !== "") {
+        document.getElementById("loginlogout").innerHTML = 
+        '<span class="homepage_links">' + curr_user + '</span>' +
+        '<a class="homepage_links" onclick="logout(event)" href="#">Logout</a>';
+      } else {
+        document.getElementById("loginlogout").innerHTML = 
+        '<a class="homepage_links" href="/login">Login</a>' +
+        '<a class="homepage_links" href="/register">Register</a>';
+      }
+    };
+  </script>
 </head>
 <body onload="checkSession()">
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -45,20 +71,19 @@ let checkSession = ()=>{
         </li>
       </ul>
       <span class="navbar-text">
-        <div class="loginlink" id="loginlogout">
-        </div>
-        </span>
+        <div class="loginlink" id="loginlogout"></div>
+      </span>
     </div>
   </div>
 </nav>
 <div style="display: flex;flex-direction: column;">
-<div class="card" style="width: 50%;margin-top: 50px;align-self: center;">
-  <img src="static/car_dealership.jpg" class="card-img-top" alt="...">
-  <div class="banner">
-    <h5>Welcome to our Dealerships!</h5>
-    <a href="/dealers" class="btn" style="background-color: aqua;margin:10px">View Dealerships</a>
+  <div class="card" style="width: 50%;margin-top: 50px;align-self: center;">
+    <img src="static/car_dealership.jpg" class="card-img-top" alt="...">
+    <div class="banner">
+      <h5>Welcome to our Dealerships!</h5>
+      <a href="/dealers" class="btn" style="background-color: aqua;margin:10px">View Dealerships</a>
+    </div>
   </div>
-</div>
 </div>
 </body>
 </html>
